methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: not found: value isFacingTrails
    while(isFacingTrails==true and estSurBiscuit==false){
          ^SlugHunting:11: error: not found: value isFacingTrails
       while(isFacingTrails==true and estSurBiscuit==false){
             ^SlugHunting:19: error: not found: value isFacingTrails
      while(isFacingTrails==true and estSurBiscuit==false){
            ^